--- a/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletProgressViewController.xib
+++ b/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletProgressViewController.xib
@@ -24,6 +24,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateWalletProgressViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
                 <outlet property="cancelButton" destination="FIX-uE-nue" id="eWY-zi-uAk"/>
+                <outlet property="errorLabel" destination="tzy-Nw-Qka" id="VdZ-8E-1DH"/>
                 <outlet property="progressTitleLabel" destination="ZqN-A1-TIj" id="gbH-jG-pwq"/>
                 <outlet property="progressValueLabel" destination="ptl-BF-NdL" id="erB-PX-mi1"/>
                 <outlet property="progressView" destination="bZD-dB-5UV" id="whc-Ut-x2W"/>
@@ -93,6 +94,15 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
+                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzy-Nw-Qka">
+                            <rect key="frame" x="0.0" y="175.66666666666666" width="253" height="0.0"/>
+                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                            <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                            </userDefinedRuntimeAttributes>
+                        </label>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOp-KF-vke">
                             <rect key="frame" x="0.0" y="175.66666666666666" width="253" height="0.0"/>
                             <string key="text">Only the wallet balance (UTXO) can be restored,  transaction info is always private
