--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/PaymentProofDetailViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/PaymentProofDetailViewController.xib
@@ -28,6 +28,8 @@
                 <outlet property="footerLeftOffset" destination="AtD-e5-gZV" id="E0E-gV-PiT"/>
                 <outlet property="footerRightOffset" destination="SaG-WN-0ID" id="PuY-zN-X6i"/>
                 <outlet property="footerView" destination="QUo-Jy-8FX" id="FUg-XB-qjC"/>
+                <outlet property="headerdHeight" destination="PI6-YT-Daf" id="JUL-OY-uMq"/>
+                <outlet property="inputFieldHeight" destination="exu-Be-4YX" id="gCq-iD-f4q"/>
                 <outlet property="view" destination="xhf-nH-SmJ" id="38M-Kv-ZP5"/>
             </connections>
         </placeholder>
@@ -102,64 +104,77 @@
             <viewLayoutGuide key="safeArea" id="33G-az-vd2"/>
         </view>
         <view contentMode="scaleToFill" id="f7L-Hl-nDs">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paste your payment proof here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2a-wK-gRe">
-                    <rect key="frame" x="20" y="20" width="335" height="19.5"/>
-                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="paste_payment_proof"/>
-                    </userDefinedRuntimeAttributes>
-                </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PWr-9E-sR9" customClass="BMTextView" customModule="BeamWallet" customModuleProvider="target">
-                    <rect key="frame" x="15" y="52" width="345" height="40"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ekq-f7-dCk">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paste your payment proof here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2a-wK-gRe">
+                            <rect key="frame" x="25" y="20" width="325" height="19.5"/>
+                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="paste_payment_proof"/>
+                            </userDefinedRuntimeAttributes>
+                        </label>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PWr-9E-sR9" customClass="BMTextView" customModule="BeamWallet" customModuleProvider="target">
+                            <rect key="frame" x="15" y="52" width="345" height="40"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="exu-Be-4YX"/>
+                            </constraints>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
+                                    <real key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="SNg-j0-a7V"/>
+                            </connections>
+                        </textView>
+                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cannot decode a proof, illegal sequence" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPh-ri-LzL">
+                            <rect key="frame" x="20" y="92" width="335" height="19.5"/>
+                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
+                            <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="payment_proof_error"/>
+                            </userDefinedRuntimeAttributes>
+                        </label>
+                    </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="exu-Be-4YX"/>
+                        <constraint firstItem="LPh-ri-LzL" firstAttribute="top" secondItem="PWr-9E-sR9" secondAttribute="bottom" id="Gjx-0x-zsy"/>
+                        <constraint firstItem="X2a-wK-gRe" firstAttribute="top" secondItem="Ekq-f7-dCk" secondAttribute="top" constant="20" id="Le6-IE-hVm"/>
+                        <constraint firstItem="X2a-wK-gRe" firstAttribute="leading" secondItem="Ekq-f7-dCk" secondAttribute="leading" constant="25" id="MFL-YK-aCG"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="132" id="PI6-YT-Daf"/>
+                        <constraint firstItem="X2a-wK-gRe" firstAttribute="centerX" secondItem="Ekq-f7-dCk" secondAttribute="centerX" id="V4h-XB-ooe"/>
+                        <constraint firstItem="LPh-ri-LzL" firstAttribute="leading" secondItem="Ekq-f7-dCk" secondAttribute="leading" constant="20" id="aa1-DQ-wdK"/>
+                        <constraint firstAttribute="trailing" secondItem="LPh-ri-LzL" secondAttribute="trailing" constant="20" id="eQx-eE-p1Y"/>
+                        <constraint firstAttribute="trailing" secondItem="PWr-9E-sR9" secondAttribute="trailing" constant="15" id="mOn-aU-Dxb"/>
+                        <constraint firstItem="PWr-9E-sR9" firstAttribute="leading" secondItem="Ekq-f7-dCk" secondAttribute="leading" constant="15" id="o9k-Og-NBP"/>
+                        <constraint firstItem="PWr-9E-sR9" firstAttribute="top" secondItem="X2a-wK-gRe" secondAttribute="bottom" constant="12.5" id="vcc-Ul-iDE"/>
                     </constraints>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
-                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
-                            <real key="value" value="1"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="SNg-j0-a7V"/>
-                    </connections>
-                </textView>
-                <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cannot decode a proof, illegal sequence" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPh-ri-LzL">
-                    <rect key="frame" x="15" y="92" width="345" height="19.5"/>
-                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
-                    <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                    <nil key="highlightedColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="payment_proof_error"/>
-                    </userDefinedRuntimeAttributes>
-                </label>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="fSQ-aG-5j3" firstAttribute="trailing" secondItem="X2a-wK-gRe" secondAttribute="trailing" constant="20" id="21h-XL-QFW"/>
-                <constraint firstItem="X2a-wK-gRe" firstAttribute="top" secondItem="fSQ-aG-5j3" secondAttribute="top" constant="20" id="2Z3-Jt-e38"/>
-                <constraint firstAttribute="trailing" secondItem="LPh-ri-LzL" secondAttribute="trailing" constant="15" id="Hu1-R7-CPd"/>
-                <constraint firstItem="PWr-9E-sR9" firstAttribute="top" secondItem="X2a-wK-gRe" secondAttribute="bottom" constant="12.5" id="KDR-4X-5Iz"/>
-                <constraint firstItem="fSQ-aG-5j3" firstAttribute="trailing" secondItem="PWr-9E-sR9" secondAttribute="trailing" constant="15" id="RIw-7x-Nvq"/>
-                <constraint firstItem="LPh-ri-LzL" firstAttribute="top" secondItem="PWr-9E-sR9" secondAttribute="bottom" id="kVi-xF-A45"/>
-                <constraint firstItem="LPh-ri-LzL" firstAttribute="leading" secondItem="fSQ-aG-5j3" secondAttribute="leading" constant="15" id="lvi-e8-QRd"/>
-                <constraint firstItem="PWr-9E-sR9" firstAttribute="leading" secondItem="fSQ-aG-5j3" secondAttribute="leading" constant="15" id="w3n-71-nZo"/>
-                <constraint firstItem="X2a-wK-gRe" firstAttribute="leading" secondItem="f7L-Hl-nDs" secondAttribute="leading" constant="20" id="xpd-tP-sph"/>
+                <constraint firstAttribute="trailing" secondItem="Ekq-f7-dCk" secondAttribute="trailing" id="AXB-aO-GnX"/>
+                <constraint firstItem="fSQ-aG-5j3" firstAttribute="bottom" secondItem="Ekq-f7-dCk" secondAttribute="bottom" id="HnE-aw-YGD"/>
+                <constraint firstItem="Ekq-f7-dCk" firstAttribute="top" secondItem="fSQ-aG-5j3" secondAttribute="top" id="J8r-Uu-Dsz"/>
+                <constraint firstItem="Ekq-f7-dCk" firstAttribute="leading" secondItem="f7L-Hl-nDs" secondAttribute="leading" id="U6h-vb-jm9"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="fSQ-aG-5j3"/>
-            <point key="canvasLocation" x="-188" y="207"/>
+            <point key="canvasLocation" x="-188" y="212.29385307346328"/>
         </view>
     </objects>
     <resources>
