--- a/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/Resources/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -56,7 +56,7 @@
                         <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="rsg-bQ-I5o" firstAttribute="leading" secondItem="8c9-H9-Xgu" secondAttribute="leading" id="1pR-mt-EuO"/>
-                            <constraint firstItem="PmF-zm-gFK" firstAttribute="top" secondItem="rsg-bQ-I5o" secondAttribute="bottom" id="3Ig-Vw-tUO"/>
+                            <constraint firstAttribute="bottom" secondItem="rsg-bQ-I5o" secondAttribute="bottom" id="3Ig-Vw-tUO"/>
                             <constraint firstItem="rsg-bQ-I5o" firstAttribute="top" secondItem="8c9-H9-Xgu" secondAttribute="top" id="71h-Yf-zsu"/>
                             <constraint firstItem="xG3-7V-btI" firstAttribute="centerY" secondItem="8c9-H9-Xgu" secondAttribute="centerY" id="D3P-Mh-CPQ"/>
                             <constraint firstItem="xG3-7V-btI" firstAttribute="centerX" secondItem="8c9-H9-Xgu" secondAttribute="centerX" id="Lo8-1m-9cq"/>
@@ -70,7 +70,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="initial_background" width="1440" height="2368"/>
+        <image name="initial_background" width="1125" height="2001"/>
         <image name="logo" width="159" height="142"/>
     </resources>
 </document>
