--- a/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
@@ -21,11 +21,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EnterWalletPasswordViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
                 <outlet property="loginLabel" destination="U5v-Lj-JVe" id="CU6-jx-dwt"/>
-                <outlet property="mainStack" destination="vUf-hW-nJa" id="4bm-Pt-d8w"/>
                 <outlet property="passField" destination="gDD-bM-m0V" id="eSe-1W-C7L"/>
-                <outlet property="passViewHeight" destination="2yF-bN-MWa" id="9oj-7T-K0c"/>
+                <outlet property="restoreButton" destination="zrP-UG-JCV" id="p52-Hf-GgD"/>
+                <outlet property="stackView" destination="vUf-hW-nJa" id="IJ8-VX-dg8"/>
                 <outlet property="stackWidth" destination="r1j-y8-kRz" id="BfW-vV-qtI"/>
-                <outlet property="topOffset" destination="2g2-iY-1pl" id="bkb-yr-GmB"/>
+                <outlet property="topSpace" destination="K9J-Z0-sfQ" id="ueK-zw-Ekf"/>
                 <outlet property="touchIdButton" destination="xxN-ni-oL7" id="xBt-5V-2KF"/>
                 <outlet property="view" destination="sPr-XI-erP" id="dCm-mx-xBc"/>
             </connections>
@@ -35,8 +35,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="vUf-hW-nJa">
-                    <rect key="frame" x="30" y="75" width="315" height="468.5"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="vUf-hW-nJa">
+                    <rect key="frame" x="30" y="114.5" width="315" height="358.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="F4r-MH-6cH">
                             <rect key="frame" x="22.5" y="0.0" width="270" height="129.5"/>
@@ -61,7 +61,7 @@
                             </subviews>
                         </stackView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="od7-dn-mp3">
-                            <rect key="frame" x="0.0" y="179.5" width="315" height="100"/>
+                            <rect key="frame" x="0.0" y="159.5" width="315" height="50"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gDD-bM-m0V" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
                                     <rect key="frame" x="15" y="5" width="285" height="22"/>
@@ -89,7 +89,7 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="100" id="2yF-bN-MWa"/>
+                                <constraint firstAttribute="height" constant="50" id="2yF-bN-MWa"/>
                                 <constraint firstItem="gDD-bM-m0V" firstAttribute="leading" secondItem="od7-dn-mp3" secondAttribute="leading" constant="15" id="6CO-Eh-ug1"/>
                                 <constraint firstItem="gDD-bM-m0V" firstAttribute="top" secondItem="od7-dn-mp3" secondAttribute="top" constant="5" id="P77-Q1-TWR"/>
                                 <constraint firstAttribute="trailing" secondItem="gDD-bM-m0V" secondAttribute="trailing" constant="15" id="pj3-wZ-xIY"/>
@@ -97,8 +97,8 @@
                             </constraints>
                             <viewLayoutGuide key="safeArea" id="UG1-s4-pcR"/>
                         </view>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Y5a-wk-RUK">
-                            <rect key="frame" x="31" y="329.5" width="253" height="139"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Y5a-wk-RUK">
+                            <rect key="frame" x="31" y="239.5" width="253" height="119"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eoB-qE-PXI" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="253" height="44"/>
@@ -124,7 +124,7 @@
                                     </connections>
                                 </button>
                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B50-3I-WXb" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="69" width="253" height="44"/>
+                                    <rect key="frame" x="0.0" y="59" width="253" height="44"/>
                                     <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="253" id="abk-b9-t6M"/>
@@ -141,12 +141,9 @@
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                     </userDefinedRuntimeAttributes>
-                                    <connections>
-                                        <action selector="onChangeWalletWithSender:" destination="-1" eventType="touchUpInside" id="Sm8-F6-7A0"/>
-                                    </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xxN-ni-oL7">
-                                    <rect key="frame" x="0.0" y="94" width="253" height="45"/>
+                                    <rect key="frame" x="0.0" y="74" width="253" height="45"/>
                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" image="iconTouchid">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -162,11 +159,36 @@
                         <constraint firstAttribute="width" constant="315" id="r1j-y8-kRz"/>
                     </constraints>
                 </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zrP-UG-JCV">
+                    <rect key="frame" x="61" y="573" width="253" height="44"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="B3J-cS-8aw"/>
+                        <constraint firstAttribute="width" constant="253" id="rIn-2G-wiZ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
+                    <state key="normal" title="Restore wallet or create new one">
+                        <color key="titleColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="0.0"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="restore_wallet_title"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="onChangeWalletWithSender:" destination="-1" eventType="touchUpInside" id="GTx-Kj-ONW"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUf-hW-nJa" firstAttribute="top" secondItem="n6b-Qo-3zm" secondAttribute="top" constant="55" id="2g2-iY-1pl"/>
-                <constraint firstItem="vUf-hW-nJa" firstAttribute="centerX" secondItem="sPr-XI-erP" secondAttribute="centerX" id="t6R-ON-kSF"/>
+                <constraint firstItem="vUf-hW-nJa" firstAttribute="centerX" secondItem="sPr-XI-erP" secondAttribute="centerX" id="DPW-k4-53i"/>
+                <constraint firstItem="vUf-hW-nJa" firstAttribute="centerY" secondItem="sPr-XI-erP" secondAttribute="centerY" constant="-40" id="K9J-Z0-sfQ"/>
+                <constraint firstItem="n6b-Qo-3zm" firstAttribute="bottom" secondItem="zrP-UG-JCV" secondAttribute="bottom" constant="50" id="WNZ-0a-Qfr"/>
+                <constraint firstItem="zrP-UG-JCV" firstAttribute="centerX" secondItem="sPr-XI-erP" secondAttribute="centerX" id="qny-6k-l0F"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="n6b-Qo-3zm"/>
             <point key="canvasLocation" x="53.600000000000001" y="70.614692653673174"/>
