--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletProgressCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletProgressCell.xib
@@ -38,16 +38,20 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TlK-Sl-djr">
-                                <rect key="frame" x="15" y="15" width="90.5" height="21"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="18"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="15" y="15" width="70.5" height="16.5"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                                <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="in_progress"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="letterSpacing">
+                                        <real key="value" value="1.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="LQy-uL-llp">
-                                <rect key="frame" x="15" y="56" width="270" height="75"/>
+                            <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="LQy-uL-llp">
+                                <rect key="frame" x="15" y="51.5" width="270" height="75"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UfE-Yf-jhq">
                                         <rect key="frame" x="0.0" y="0.0" width="270" height="30"/>
@@ -55,7 +59,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XZJ-rK-ClF">
                                                 <rect key="frame" x="0.0" y="0.0" width="84" height="30"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconReceived" translatesAutoresizingMaskIntoConstraints="NO" id="10J-v4-i3g">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-received" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="10J-v4-i3g">
                                                         <rect key="frame" x="0.0" y="7" width="16" height="16"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bTF-FJ-04L">
@@ -97,7 +101,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="TOv-eS-3XZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="84.5" height="30"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconSent" translatesAutoresizingMaskIntoConstraints="NO" id="GvM-NG-yIc">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-sent" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GvM-NG-yIc">
                                                         <rect key="frame" x="0.0" y="7" width="16" height="16"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nZD-ff-GLJ">
@@ -136,7 +140,7 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconDownArrow" translatesAutoresizingMaskIntoConstraints="NO" id="kO2-nM-Mbs">
-                                <rect key="frame" x="262" y="22" width="13" height="8"/>
+                                <rect key="frame" x="262" y="20" width="13" height="8"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="13" id="03W-Tv-r9g"/>
                                     <constraint firstAttribute="height" constant="8" id="wYe-3W-Yo8"/>
@@ -150,7 +154,7 @@
                             <constraint firstItem="NHf-s5-cUd" firstAttribute="top" secondItem="Mdh-nY-eDo" secondAttribute="top" id="Meh-zI-oUa"/>
                             <constraint firstItem="LQy-uL-llp" firstAttribute="leading" secondItem="Mdh-nY-eDo" secondAttribute="leading" constant="15" id="Pd6-8Y-tEt"/>
                             <constraint firstAttribute="trailing" secondItem="NHf-s5-cUd" secondAttribute="trailing" id="UNv-Wj-Wg5"/>
-                            <constraint firstItem="kO2-nM-Mbs" firstAttribute="top" secondItem="Mdh-nY-eDo" secondAttribute="top" constant="22" id="W2Q-9v-L3o"/>
+                            <constraint firstItem="kO2-nM-Mbs" firstAttribute="top" secondItem="Mdh-nY-eDo" secondAttribute="top" constant="20" id="W2Q-9v-L3o"/>
                             <constraint firstItem="NHf-s5-cUd" firstAttribute="leading" secondItem="Mdh-nY-eDo" secondAttribute="leading" id="XNG-cN-swO"/>
                             <constraint firstItem="TlK-Sl-djr" firstAttribute="top" secondItem="Mdh-nY-eDo" secondAttribute="top" constant="15" id="o3J-Rp-4bu"/>
                             <constraint firstItem="LQy-uL-llp" firstAttribute="top" secondItem="TlK-Sl-djr" secondAttribute="bottom" constant="20" id="ojF-kf-DqR"/>
@@ -177,20 +181,22 @@
                 <outlet property="arrowIcon" destination="kO2-nM-Mbs" id="0Ez-HM-jB6"/>
                 <outlet property="currencyReceivingIcon" destination="QkC-2T-Sqs" id="WwL-IZ-Ln6"/>
                 <outlet property="currencySendingIcon" destination="Ccv-X7-xeS" id="3O8-mm-q1G"/>
+                <outlet property="mainButton" destination="NHf-s5-cUd" id="rkb-6D-STW"/>
                 <outlet property="mainStackView" destination="LQy-uL-llp" id="hcg-rd-H1X"/>
                 <outlet property="mainView" destination="Mdh-nY-eDo" id="yrE-uQ-ayL"/>
                 <outlet property="receivingLabel" destination="cmw-df-ShN" id="hRg-xj-oDH"/>
                 <outlet property="receivingStack" destination="UfE-Yf-jhq" id="9JQ-41-gcl"/>
                 <outlet property="sentLabel" destination="Mp8-tI-hcy" id="bOz-Ze-fWs"/>
                 <outlet property="sentStack" destination="lgf-Cy-nCD" id="B6l-7L-qX5"/>
+                <outlet property="titleLabel" destination="TlK-Sl-djr" id="Hrz-qq-1fL"/>
             </connections>
             <point key="canvasLocation" x="52.799999999999997" y="87.256371814092958"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="icon-received" width="22" height="22"/>
+        <image name="icon-sent" width="22" height="22"/>
         <image name="iconDownArrow" width="13" height="8"/>
-        <image name="iconReceived" width="20" height="20"/>
-        <image name="iconSent" width="20" height="20"/>
         <image name="iconSymbol" width="16" height="24.5"/>
     </resources>
 </document>
